--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Place-now</title>
+
+    <script src="https://kit.fontawesome.com/008b20cf05.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
