장소 추가시 좌표 정보 추가

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Place-now</title>
 
     <script src="https://kit.fontawesome.com/008b20cf05.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=eeed9748df7e096de17bda4de28e0a8b&libraries=services"></script>
   </head>
   <body>
     <div id="root"></div>
